# streamlit-presentation

./: .gitignore  LICENSE  README.md  devcontainer.json  environment.yml  installuv.sh  oryx-build-commands.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamit/: config.toml  secrets.toml
.streamlit/: config.toml  secrets-example.toml
demos/: 01-basicStreamlit.py  02-basicAPI.py  03-basicLLM.py  04-basicPandas.py  04-stackoverflow-survey.py  05-Stackoverflow-survey.py  basicLLM
