[project]
name = "streamlit-presentation"
version = "0.1.0"
description = "A demo of streamlit done by Damian Montero at the first PyData Miami"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.3.2",
    "openai>=1.106.1",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
    "streamlit>=1.49.1",
]
