[project]
name = "streamlit-presentation"
version = "0.1.0"
description = "A demo of streamlit done by Damian Montero at the first PyData Miami"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.3.2",
    "openai>=1.106.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scipy>=1.16.1",
    "streamlit>=1.49.1",
]
